# enumchar

./: Cargo.toml  README.md  doc.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: test_enumchar.rs  test_errors.rs
tests/errors/: from_char_incomplete_variants.stderr  incomplete_display.rs  incomplete_display.stderr  incomplete_from_char.rs  incomplete_from_char.stderr  invalid_expr_type.rs  invalid_expr_type.stderr  invalid_lit_type.rs  invalid_lit_type.stderr  repeatchar.rs  repeatchar.stderr  struct.rs  struct.stderr
