[package]
name = "enumchar"
description = "Rust derive macro for enums where each variant is represented by a single char"
version = "0.1.2"
authors = ["Leandro Lisboa Penz <lpenz@lpenz.org>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lpenz/enumchar"
repository = "https://github.com/lpenz/enumchar"
categories = ["development-tools", "parsing"]
keywords = ["enum", "char", "parse"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.107"
quote = "1.0.47"
syn = { version = "3.0.0", features = ["extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
